# llm-search-poc

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.dist  hello.py  langgraph.json  pyproject.toml  requirements.txt
app/: README.md  streamlit_app.py
docs/: design.md
langgraph/: README.md
langgraph/codeact/: README.md  math_example.py
langgraph/contextual_coder/: contextual_coder.py
langgraph/data-enrichment-agent-python/: langgraph.json  pyproject.toml
notebooks/: 00 - Chat models.ipynb  01 - Prompt Engineering.ipynb  01 - Tools.ipynb  02 - Retrieval System Overview.ipynb  03 - Tools.ipynb  04 - Text Splitters.ipynb  05 - Embedding Models.ipynb  06 - Vectore Stores.ipynb  07 - Retrievers.ipynb  08 - RAG.ipynb  README.md  bedrock.ipynb  document_loader_pdf.ipynb  github_agent.ipynb  movie.csv  requirements.txt  tmp-00 - Langchain Core Features.ipynb
src/: __init__.py  config.py  evaluate_relevance.py  main.py  metrics.py  ranking.py  schemas.py  search_engine.py  test.py
